Aligned delete photo area, removed repeated image uploads in favor or js add button, fixed cucumber test relating to multiple uploads, and style fixes for audio area.

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -614,3 +614,30 @@ nav {
 .close-side-tab {
   padding-right: 0
 }
+
+////////////////////////////////////////////////
+// Thumb gallery/Audio player
+////////////////////////////////////////////////
+
+.thumbnail {
+  float: left;
+  margin: 1px;
+
+  input {
+    float: left;
+    margin: 94px 12px 0 0;
+  }
+
+  label {
+    margin: 90px 12px 0 0;
+    float: left;
+  }
+}
+
+.jp-audio {
+  margin: 0 !important;
+}
+
+.jp-interface {
+  margin-top: 20px;
+}
